<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.setting.SettingFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/md_theme_primaryContainer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextAppearance="@style/ToolbarTitle"
            app:navigationIcon="@drawable/arrow_back"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_appearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appearance"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/appbar_layout"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_darkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_appearance"
        app:layout_constraintStart_toStartOf="parent"/>

   <Button
       android:id="@+id/btn_theme"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="16dp"
       android:text="@string/theme"
       app:layout_constraintTop_toBottomOf="@+id/tv_appearance"
       app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>