<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

   <com.google.android.material.appbar.AppBarLayout
       android:id="@+id/appBar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

      <com.google.android.material.appbar.CollapsingToolbarLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
          app:titleEnabled="false">

         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:layout_collapseMode="parallax"
             app:layout_collapseParallaxMultiplier="0.7">

            <ImageView
                android:id="@+id/ivDetailProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="80dp"
                android:src="@drawable/account_circle"
                tools:src="@tools:sample/avatars"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:text="@string/username"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintTop_toBottomOf="@+id/ivDetailProfile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="David Arr"/>

            <TextView
                android:id="@+id/tvDetailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/nickname"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintTop_toBottomOf="@+id/tvUsername"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="David Arrozaqi"/>

            <TextView
                android:id="@+id/tvFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/followers"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailName"
                app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="3495895" />

            <TextView
                android:id="@+id/tvFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/following"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailName"
                app:layout_constraintStart_toEndOf="@+id/tvFollowers"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="1" />

         </androidx.constraintlayout.widget.ConstraintLayout>

         <com.google.android.material.progressindicator.LinearProgressIndicator
             android:id="@+id/linearProgress"
             android:layout_marginTop="?attr/actionBarSize"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:indeterminate="true"
             app:hideAnimationBehavior="inward"
             app:showAnimationBehavior="inward"/>

         <androidx.appcompat.widget.Toolbar
             android:id="@+id/top_bar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/md_theme_primaryContainer"
             app:titleTextAppearance="@style/ToolbarTitle"
             app:layout_collapseMode="pin"
             app:navigationIcon="@drawable/arrow_back"/>

      </com.google.android.material.appbar.CollapsingToolbarLayout>

      <com.google.android.material.tabs.TabLayout
          android:id="@+id/tabLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/md_theme_primaryContainer"
          app:tabMode="fixed"
          app:tabGravity="fill" />

   </com.google.android.material.appbar.AppBarLayout>

   <androidx.viewpager2.widget.ViewPager2
      android:id="@+id/viewPager"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

   <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:id="@+id/fab_fav"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="16dp"
       android:layout_gravity="bottom|end"
       android:focusable="true"
       style="?attr/floatingActionButtonStyle"
       android:src="@drawable/favorite_border"
       android:backgroundTint="@color/md_theme_primaryContainer"
       android:contentDescription="@null" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>